# Wasteland-invaders

./: Cargo.toml  README.md  cargo.toml
.continue/rules/: bevy-0.17.md  new-rule.md
.github/workflows/: rust.yml
assets/models/: plane.gltf
assets/shaders/: caustic_floor.wgsl  heightmap_terrain.wgsl  heightmap_terrain_2.wgsl  masked_river_water.wgsl  river_water.wgsl  simplex_water.wgsl  test.wgsl  water.wgsl  water_caustics_0_16 copy.wgsl  water_caustics_0_16.wgsl
src/: main.rs
src/flyby/: fly_by.rs  mod.rs
src/heightmap_material/: gpu_heightmap_renderer.rs  gpu_heightmap_terrain.rs  gpu_river_material.rs  heightmap_terrain_material.rs  mod.rs  river_mask_capture.rs
src/heightmapgenerator/: enemy_placement_generator.rs  height_map_generator.rs  height_map_renderer.rs  mod.rs
src/rendering/: animation.rs  bullet.rs  camera.rs  caustic_floor_material.rs  complex_water.rs  debug.rs  enemy.rs  enemy_spline_follower.rs  fbm_terrain.rs  input.rs  mod.rs  movingenemy.rs  plane.rs  spline.rs  water.rs
src/riverbank/: components.rs  mod.rs  plugin.rs  resources.rs  river_carving.rs  systems.rs
src/riverbank/utils/: curve_generation.rs  mesh_utilities.rs  mod.rs
src/terrain/: generation.rs  mod.rs  noise.rs  resources.rs  systems.rs
