[package]
name = "wasteland-invaders"
version = "0.1.0"
edition = "2024"
authors = ["andrzej.witkowski@gmail.com"]
description = "A game built with the Bevy engine where players defend against invaders in a post-apocalyptic wasteland."
license = "MIT"
repository = "https://github.com/andrzejwitkowski/wasteland-invaders"

[dependencies]
bevy = { version = "0.16.0", features = ["jpeg"] }
bevy-inspector-egui = "0.31.0"
bevy_editor_pls = "0.10.0"
bevy_egui = "0.34.1"
bevy_gltf = "0.16.0"
bevy_pbr = "0.16.0"
rand = "0.9.1"
noise = "0.9.0"
bevy_blendy_cameras = "0.7.0"

[[bin]]
name = "wasteland-invaders"
path = "src/main.rs"
